# RetouchPic

./: LICENSE  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/white/retouchdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/white/retouchdemo/: DomincolorTestActivity.kt  MainActivity.kt  RetouchActivity.kt
app/src/main/res/layout/: activity_domincolor_test.xml  activity_main.xml  activity_retouch.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/white/retouchdemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
modRetouch/: .gitignore  build.gradle
modRetouch/rust/: Cargo.toml
modRetouch/rust/src/: lib.rs
modRetouch/src/androidTest/java/com/white/component_retouch/: ExampleInstrumentedTest.kt
modRetouch/src/main/: AndroidManifest.xml
modRetouch/src/main/cpp/: CMakeLists.txt  dominantcolors.c
modRetouch/src/main/java/com/white/dominantColor/: DominantColor.java  DominantColors.java
modRetouch/src/main/java/com/white/piceditor/: BitmapUtil.java  BrushDrawingView.java  BrushViewChangeListener.java  CustomEffect.java  FilterImageView.java  GLToolbox.java  ImageFilterView.java  LinePath.java  MultiTouchListener.java  OnPhotoEditorListener.java  OnSaveBitmap.java  PhotoEditor.java  PhotoEditorView.java  PhotoFilter.java  RetouchColorHolder.kt  SaveSettings.java  ScaleGestureDetector.java  TextStyleBuilder.java  TextureRenderer.java  Vector2D.java  ViewType.java
modRetouch/src/main/res/values/: attrs.xml
(+22 files in other folders)
